--- a/style.css
+++ b/style.css
@@ -151,5 +151,33 @@ i {
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
 
+#dice-1 {
+    top:150px;
+}
+
+#dice-2 {
+    top:260px;
+}
+
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 300; color: #EB4D4D; }
+
+.final-score {
+    /* position center trick */
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    
+    top: 520px;
+    color: #555;
+    font-size: 18px;
+    font-family: 'Lato';
+    text-align: center;
+    padding: 10px;
+    width:160px;
+    text-transform: uppercase;
+}
+
+.final-score:focus {
+    outline: none;
+}
